// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reserves endpoint should return error for missing provider env var 1`] = `
{
  "error": {
    "message": "Missing required environment variable: MISSING_PROVIDER_URL",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute reserves endpoint should return error for request outside of schedule 1`] = `
{
  "error": {
    "message": "Request for feed 'My feed' received at time 11:11 outside of schedule: 22:00 to 23:00",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 409,
}
`;

exports[`execute reserves endpoint should return success 1`] = `
{
  "data": {
    "components": [
      {
        "addressCount": 1,
        "currency": "USDC",
        "name": "component1",
        "totalBalance": 0.123,
      },
    ],
    "conversionRates": [],
    "decimals": 18,
    "result": "123000000000000000",
    "resultAsNumber": 0.123,
  },
  "result": "123000000000000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
